--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   flutter_spinkit: ^5.2.0
   provider: ^6.0.5
-  
+  visibility_detector: ^0.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
