--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,11 +68,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assest/bg.png
-    - assest/botImage.gif
-    - assest/user.gif
-    - assest/bot.png
-    - assest/user.png
+    - assest/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
